# localscribe

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/: ARCHITECTURE.md  BACKLOG.md  PRIVACY.md  TROUBLESHOOTING.md  USAGE.md
examples/: sample-output.md
src/scribe/: audio_preprocess.py  audio_probe.py  cli.py  config.py  eval.py  pipeline.py  render.py  separate.py  summarize.py  transcribe.py
