[project]
name = "scribe"
version = "0.1.0"
description = "Local interview transcription with diarization and summarization for Apple Silicon."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "MIT" }
authors = [{ name = "evalloee" }]
keywords = [
    "transcription",
    "whisper",
    "whisperx",
    "pyannote",
    "diarization",
    "ollama",
    "apple-silicon",
    "mlx",
    "gdpr",
    "local-first",
    "speech-to-text",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "whisperx>=3.8.6",
    "pyannote.audio>=4.0.0",
    "torch>=2.2.0",
    "torchaudio>=2.2.0",
    "typer[all]>=0.12.0",
    "rich>=13.7.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
]

[project.urls]
Repository = "https://github.com/FirstDawnDigital/localscribe"
Issues = "https://github.com/FirstDawnDigital/localscribe/issues"

[project.scripts]
scribe = "scribe.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scribe"]

