[project]
name = "scribe"
version = "0.1.0"
description = "Local interview transcription with diarization and summarization for Apple Silicon."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "MIT" }
authors = [{ name = "evalloee" }]
keywords = [
    "transcription",
    "whisper",
    "whisperx",
    "pyannote",
    "diarization",
    "ollama",
    "apple-silicon",
    "mlx",
    "gdpr",
    "local-first",
    "speech-to-text",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "whisperx>=3.8.6",
    "pyannote.audio>=4.0.0",
    "torch>=2.2.0",
    "torchaudio>=2.2.0",
    "typer[all]>=0.12.0",
    "rich>=13.7.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
# `pip install scribe[eval]` to install meeteval for tcpWER scoring against a
# manually curated reference transcript. Kept optional because meeteval pulls
# in a fair amount of numpy/cython tooling that isn't needed for daily use.
eval = [
    "meeteval>=0.4.0",
]
# `pip install scribe[separate]` for PixIT speech separation (B3). asteroid
# provides ToTaToNet (the separation network), speechbrain provides the
# ECAPA speaker embeddings PixIT uses to attribute streams. Kept optional
# because together they pull a fair amount of extra deps that aren't needed
# for the default pipeline.
separate = [
    "asteroid>=0.7.0",
    # speechbrain >=1.0 has the EncoderClassifier under speechbrain.inference
    # that pyannote.audio 4.0.4 imports, but >=1.0 also dropped the `token`
    # kwarg pyannote still passes. src/scribe/separate.py monkey-patches
    # Pretrained.__init__ to drop that kwarg.
    "speechbrain>=1.0.0",
    # asteroid drags torchmetrics 0.11.4 which does `from pkg_resources
    # import ...`; that import fails under setuptools >=81 where
    # pkg_resources was removed. Pin setuptools below 81 so the [separate]
    # extra is installable out of the box.
    "setuptools<81",
]

[project.urls]
Repository = "https://github.com/FirstDawnDigital/localscribe"
Issues = "https://github.com/FirstDawnDigital/localscribe/issues"

[project.scripts]
scribe = "scribe.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scribe"]

